--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # local env files
-.env.local
+.env
 .env.development.local
 .env.test.local
 .env.production.local
